<resources>
    <string name="app_name">Android</string>

    <string name="bottom_title_school">School</string>
    <string name="bottom_title_community">Community</string>
    <string name="bottom_title_calendar">Calendar</string>
    <string name="bottom_title_person">Person</string>

    <string name="facebook_app_id">2395046100588955</string>
    <string name="fb_login_protocol_scheme">fb2395046100588955</string>

    <string name="swipe_title">Swipe up to give it a go</string>

    <!-- LOGIN SCREEN -->
    <string name="continue_with_google">CONTINUE WITH GOOGLE</string>
    <string name="continue_with_facebook">CONTINUE WITH FACEBOOK</string>


    <!-- NAVIGATION DRAWER -->
    <string name="nav_drawer_menu">Menu</string>
    <string name="nav_drawer_download_title">Download FXTM Trader</string>
    <string name="nav_drawer_download_message">Download our trading app\nto start your investing journey:</string>
    <string name="nav_drawer_download_button">Download</string>
    <string name="nav_drawer_item_about_fxtm">About FXTM</string>
    <string name="nav_drawer_item_share_academy">Share FXTM Academy</string>
    <string name="nav_drawer_item_talk_to_us">Talk to Us</string>
    <string name="nav_drawer_item_profile_visibility">Profile visible</string>

    <!--LEVEL-->
    <string name="level_passed">Passed %d%%</string>
    <string name="level_not_passed">Take Exam</string>
    <string name="level_topics">%d TOPICS</string>
    <string name="level_title">Level %d - %s</string>

    <!--COMMUNITY-->
    <string name="community_level">LEVEL</string>
    <string name="community_progress">Progress</string>
    <string name="community_where_you_are">See where you are compared to other FXTM users </string>
    <string name="community_activity">ACTIVITY</string>
    <string name="community_stats">STATS</string>
    <string name="community_level_title">LEVEL %d</string>
    <string name="community_congratulate">CONGRATULATE</string>

    <!--MODULE-->
    <string name="take_quiz">TAKE QUIZ</string>
    <string name="section_title">In this section you will learn to…</string>

    <!--PROFILE-->
    <string name="profile_certificates">CERTIFICATES</string>
    <string name="profile_scores">SCORES</string>

    <string name="see_all">SEE ALL</string>
    <string name="accept">accept</string>
    <string name="decline">decline</string>
    <string name="view_all">VIEW ALL</string>

    <!--CERTIFICATE-->
    <string name="certificate_date">DATE</string>
    <string name="certificate_name">NAME</string>
    <string name="certificate">CERTIFICATE</string>

    <!--SOCIABLE TAB LAYOUT-->
    <string name="tab_followers">FOLLOWERS(%d)</string>
    <string name="tab_following">FOLLOWING(%d)</string>
    <string name="tab_invite">INVITE</string>

    <!--DIALOGS-->
    <string name="dialog_accept_ok_default">OK</string>
    <string name="dialog_accept_default">yes</string>
    <string name="dialog_decline_default">no</string>

    <!--QUIZ-->
    <string name="quiz_submit">submit</string>
    <string name="quiz_next">next</string>
    <string name="quiz_correct">Correct answer!</string>
    <string name="quiz_incorrect">Incorrect answer!</string>
    <string name="quiz_progress">Question %d/%d</string>
    <string name="quiz_complete">Quiz complete</string>
    <string name="quiz_view_profile">View profile</string>
    <string name="quiz_correct_result">%d/%d Correct</string>
    <string name="quiz_continue_learning">or continue learning</string>
    <string name="quiz_ending_info">We have added an achievement to your profile - take a look!</string>
</resources>