<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/sideMenuNavigation"
        android:layout_width="@dimen/nav_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/bg_navigation_drawer">

    <LinearLayout
            android:layout_width="@dimen/nav_drawer_width"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/L"
            android:paddingEnd="0dp">

        <ImageView
                android:id="@+id/menuCloseImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="@dimen/L"
                android:src="@drawable/ic_menu"
                android:tint="@android:color/white" />

        <TextView
                style="@style/AppTheme.Text.NavigationDrawer.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_drawer_menu" />

        <TextView
                style="@style/AppTheme.Text.NavigationDrawer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/XL"
                android:text="@string/nav_drawer_download_title"
                android:textSize="19sp" />

        <TextView
                style="@style/AppTheme.Text.NavigationDrawer.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/L"
                android:text="@string/nav_drawer_download_message" />

        <Button
                android:id="@+id/downloadButton"
                style="@style/AppTheme.Text.NavigationDrawer"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/L"
                android:layout_marginBottom="@dimen/L"
                android:backgroundTint="@color/orange50"
                android:text="@string/nav_drawer_download_button"
                android:textAllCaps="true"
                android:textSize="14sp"
                app:cornerRadius="32dp" />

        <include layout="@layout/view_divider" />

        <TextView
                android:id="@+id/aboutTextView"
                style="@style/AppTheme.Text.NavigationDrawer.Item.Clickable"
                android:text="@string/nav_drawer_item_about_fxtm" />

        <include layout="@layout/view_divider" />

        <TextView
                android:id="@+id/shareTextView"
                style="@style/AppTheme.Text.NavigationDrawer.Item.Clickable"
                android:text="@string/nav_drawer_item_share_academy" />

        <include layout="@layout/view_divider" />

        <TextView
                android:id="@+id/talkTextView"
                style="@style/AppTheme.Text.NavigationDrawer.Item.Clickable"
                android:text="@string/nav_drawer_item_talk_to_us" />

        <include layout="@layout/view_divider" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    style="@style/AppTheme.Text.NavigationDrawer.Item"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/nav_drawer_item_profile_visibility" />

            <Switch
                    android:id="@+id/profileVisibitilySwitch"
                    style="@style/AppTheme.Switch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/L" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
