<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="@dimen/certificate_width"
        android:layout_height="@dimen/certificate_height"
        android:layout_marginTop="@dimen/M"
        android:layout_marginBottom="@dimen/M"
        app:cardCornerRadius="@dimen/certificate_corner_radius"
        app:cardElevation="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/certificateHeaderView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@id/guideline"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@color/green20">

            <TextView
                    style="@style/AppTheme.Text.Certificate.Header"
                    android:text="@string/certificate" />

            <TextView
                    android:id="@+id/certificateHeaderTextView"
                    style="@style/AppTheme.Text.Certificate.Header.Small"
                    tools:text="Level 2 passed" />

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.4" />

        <ImageView
                android:id="@+id/medalImageView"
                android:layout_width="@dimen/icon_L"
                android:layout_height="@dimen/icon_L"
                android:layout_marginBottom="@dimen/L"
                android:src="@drawable/ic_medal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        <View
                android:id="@+id/leftDivider"
                android:layout_width="@dimen/certificate_divider_width"
                android:layout_height="@dimen/certificate_divider_height"
                android:background="@color/blue10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/medalImageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline" />

        <TextView
                android:id="@+id/dateTextView"
                style="@style/AppTheme.Text.Certificate.Value"
                app:layout_constraintBottom_toTopOf="@id/leftDivider"
                app:layout_constraintEnd_toStartOf="@id/medalImageView"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="1.10.2018" />

        <TextView
                android:id="@+id/dateLabelTextView"
                style="@style/AppTheme.Text.Certificate.Label"
                android:text="@string/certificate_date"
                app:layout_constraintEnd_toStartOf="@id/medalImageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/leftDivider" />

        <TextView
                android:id="@+id/nameTextView"
                style="@style/AppTheme.Text.Certificate.Value"
                app:layout_constraintBottom_toTopOf="@id/rightDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/medalImageView"
                tools:text="JULIAN" />

        <View
                android:id="@+id/rightDivider"
                android:layout_width="@dimen/certificate_divider_width"
                android:layout_height="@dimen/certificate_divider_height"
                android:background="@color/blue10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/medalImageView"
                app:layout_constraintTop_toBottomOf="@id/guideline" />

        <TextView
                android:id="@+id/nameLabelTextView"
                style="@style/AppTheme.Text.Certificate.Label"
                android:text="@string/certificate_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/medalImageView"
                app:layout_constraintTop_toBottomOf="@id/rightDivider" />

        <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/S"
                android:background="@drawable/bg_certificate"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>