<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <View
                android:id="@+id/profileView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_avatar_background_height"
                android:background="@drawable/bg_profile"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageView
                android:id="@+id/userAvatarImageView"
                android:layout_width="@dimen/profile_avatar_size"
                android:layout_height="@dimen/profile_avatar_size"
                android:layout_marginBottom="@dimen/S"
                android:background="@drawable/bg_avatar_border"
                android:padding="@dimen/profile_avatar_border_width"
                app:layout_constraintBottom_toBottomOf="@id/medalImageView"
                app:layout_constraintLeft_toLeftOf="@id/profileView"
                app:layout_constraintRight_toRightOf="@id/profileView"
                app:layout_constraintTop_toTopOf="@id/profileView" />

        <ImageView
                android:id="@+id/medalImageView"
                android:layout_width="@dimen/icon_XL"
                android:layout_height="@dimen/icon_XL"
                android:background="@drawable/bg_circle"
                android:backgroundTint="@color/blue90"
                android:padding="@dimen/M"
                android:src="@drawable/ic_medal"
                app:layout_constraintBottom_toBottomOf="@id/profileView"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        <Button
                android:id="@+id/seeAllButton"
                style="@style/AppTheme.Button.Text"
                android:layout_margin="@dimen/XS"
                android:text="@string/see_all"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/certificatesRecyclerView" />

        <ImageView
                android:id="@+id/achievementImageView"
                android:layout_width="@dimen/icon_M"
                android:layout_height="@dimen/icon_M"
                android:layout_marginStart="@dimen/S"
                android:src="@drawable/ic_fire"
                app:layout_constraintStart_toEndOf="@id/userNicknameTextView"
                app:layout_constraintTop_toBottomOf="@id/userNameTextView" />

        <TextView
                android:id="@+id/userNameTextView"
                style="@style/AppTheme.Text.Section.Profile"
                android:textSize="@dimen/text_XL"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileView"
                tools:text="Jake Wharton" />

        <TextView
                android:id="@+id/userNicknameTextView"
                style="@style/AppTheme.Text.Section.Profile"
                android:text="nickname"
                app:layout_constraintBottom_toBottomOf="@id/achievementImageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userNameTextView" />

        <TextView
                android:id="@+id/achievementTextView"
                style="@style/AppTheme.Text.Section.Profile"
                android:layout_marginStart="@dimen/XS"
                android:text="3 days streak"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@id/achievementImageView"
                app:layout_constraintStart_toEndOf="@id/achievementImageView"
                app:layout_constraintTop_toBottomOf="@id/userNameTextView" />

        <TextView
                android:id="@+id/certificatesTextView"
                style="@style/AppTheme.Text.Section"
                android:layout_marginTop="@dimen/L"
                android:text="@string/profile_certificates"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userNicknameTextView" />

        <TextView
                android:id="@+id/scoresTextView"
                style="@style/AppTheme.Text.Section"
                android:layout_marginTop="@dimen/M"
                android:text="@string/profile_scores"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/seeAllButton" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/certificatesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/XS"
                android:clipToPadding="false"
                app:layout_constraintTop_toBottomOf="@id/certificatesTextView" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/scoresRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/XS"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scoresTextView" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/usersRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_sociable_height"
                android:layout_marginLeft="@dimen/M"
                android:layout_marginRight="@dimen/M"
                android:clipToPadding="false"
                android:paddingTop="@dimen/M"
                app:layout_constraintTop_toBottomOf="@id/sociableTabLayout" />

        <com.google.android.material.tabs.TabLayout
                android:id="@+id/sociableTabLayout"
                style="@style/AppTheme.Text.TabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/M"
                app:layout_constraintTop_toBottomOf="@id/scoresRecyclerView">

            <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout="@layout/tab_invite" />
        </com.google.android.material.tabs.TabLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>